k8/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  labels:
    app.kubernetes.io/name: node-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.karanlakhadive.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-app-service
            port: 
              number: 80
